<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jose.prieto.mysmallbusinessbyneza.Inicio">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/acerca_de"
        android:orderInCategory="101"
        android:title="@string/action_acerca_d"
        app:showAsAction="never" />

    <item
        android:id="@+id/busqueda_avanzada"
        android:title="@string/action_advanced_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/modo_lista"
        android:title="@string/str_lista_activo"
        android:orderInCategory="3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/lista"
        android:title="@string/action_list"
        android:orderInCategory="4"
        app:showAsAction="never">
        <menu>

            <item
                android:id="@+id/mostrar_lista"
                android:title="@string/action_show_list"
                android:orderInCategory="5"
                android:icon="@drawable/ic_list_indigo"
                app:showAsAction="never"/>

            <item
                android:id="@+id/comparar_lista"
                android:title="@string/action_compare_list"
                android:icon="@drawable/ic_compare_arrows_white"
                android:orderInCategory="10"
                app:showAsAction="never"/>

            <item
                android:id="@+id/exportar_lista"
                android:title="@string/action_export"
                android:icon="@android:drawable/ic_menu_save"
                android:orderInCategory="15"
                app:showAsAction="never"/>

            <item
                android:id="@+id/compartir_lista"
                android:title="@string/action_share"
                android:icon="@android:drawable/ic_menu_share"
                android:orderInCategory="20"
                app:showAsAction="never"/>

            <item
                android:id="@+id/borrar_lista"
                android:title="@string/action_delete_list"
                android:icon="@android:drawable/ic_menu_delete"
                android:orderInCategory="25"
                app:showAsAction="never"/>

        </menu>
    </item>

</menu>
