<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jose.prieto.mysmallbusinessbyneza.MostrarLista">

    <item
        android:id="@+id/ml_editar_lista"
        android:title="@string/action_edit_list"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="13"
        app:showAsAction="always"/>
    <item
        android:id="@+id/ml_guardar_cambios"
        android:title="@string/action_save_changes"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="14"
        app:showAsAction="always"/>

    <item
        android:id="@+id/ml_exportar_lista"
        android:title="@string/action_export"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="16"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ml_compartir_lista"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="21"
        app:showAsAction="never"/>

</menu>